--- a/springboot/MemberProject/src/main/resources/templates/member/save.html
+++ b/springboot/MemberProject/src/main/resources/templates/member/save.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+    <h2>회원가입 페이지</h2>
+
+    <form action="save.html" method="post">
+        아이디 : <input id="m_id">
+        비밀번호 : <input id="m_pass">
+        이메일 : <input id="m_email"> @ <input id="m_address">
+        <button type="submit"> 가입하기 </button>
+
+    </form>
+
 </body>
 </html>
