--- a/springboot/MemberProject1/src/main/resources/templates/member/login.html
+++ b/springboot/MemberProject1/src/main/resources/templates/member/login.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .field-error {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <h2> 로그인 화면 </h2>
+
+    <form action="/member/login" method="post" th:object="${login}">
+        이메일 : <input type="text" th:field="*{memberEmail}" placeholder="이메일"><br>
+        <p th:if="${#fields.hasErrors('memberEmail')}" th:errors="*{memberEmail}" th:errorclass="field-error"> </p>
+
+        비밀번호 : <input type="text" th:field="*{memberPassword}" placeholder="비밀번호"> <br>
+        <p th:if="${#fields.hasErrors('memberPassword')}" th:errors="*{memberPassword}" th:errorclass="field-error"> </p>
+
+        <input type="submit" value="로그인">
+
+    </form>
 </body>
 </html>
