--- a/springboot/MemberProject1/src/main/resources/templates/member/save.html
+++ b/springboot/MemberProject1/src/main/resources/templates/member/save.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .field-error {
+            color: red;
+        }
+    </style>
+
 </head>
 <body>
-    <h2>회원가입 페이지</h2>
+<h2>회원가입 페이지</h2>
 
-    <form action="save" method="post">
-    아이디 : <input id="m_id">
-    비밀번호 : <input id="m_pass">
-    이메일 : <input id="m_email"> @ <input id="m_address">
-    <button type="submit"> 가입하기 </button>
+<form action="/member/save" method="post" th:object="${member}">
+    이메일 : <input type="text" th:field="*{memberEmail}" placeholder="이메일"> <br>
+       <p th:if="${#fields.hasErrors('memberEmail')}" th:errors="*{memberEmail}" th:errorclass="field-error"> </p>
+
+    비밀번호 : <input type="text" th:field="*{memberPassword}" placeholder="비밀번호"> <br>
+        <p th:if="${#fields.hasErrors('memberPassword')}" th:errors="*{memberPassword}" th:errorclass="field-error"> </p>
+
+    이름 : <input type="text" th:field="*{memberName}" placeholder="이름"> <br>
+         <p th:if="${#fields.hasErrors('memberName')}" th:errors="*{memberName}" th:errorclass="field-error"> </p>
+
+    <input type="submit" value="회원가입">
 
 </form>
 </body>
