--- a/springboot/MemberProject1/src/main/resources/templates/member/login.html
+++ b/springboot/MemberProject1/src/main/resources/templates/member/login.html
@@ -13,6 +13,11 @@
     <h2> 로그인 화면 </h2>
 
     <form action="/member/login" method="post" th:object="${login}">
+
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p class="field-error" th:each="err: ${#fields.globalErrors()}" th:text="${err}">글로벌오류</p>
+        </div>
+
         이메일 : <input type="text" th:field="*{memberEmail}" placeholder="이메일"><br>
         <p th:if="${#fields.hasErrors('memberEmail')}" th:errors="*{memberEmail}" th:errorclass="field-error"> </p>
 
